test/operator/not_struct.lox
struct Bar {}
print !Bar      // error: operator '!' can only be used with bool operand
